--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,15 @@ fastapi-pagination==0.12.14
 pydantic==2.5.2
 pydantic-settings==2.1.0
 email-validator==2.1.0.post1
-uvicorn==0.24.0.post1
+uvicorn==0.25.0
 SQLAlchemy==2.0.23
 SQLAlchemy-Utils==0.41.1
 psycopg2==2.9.9
 
-mypy==1.7.1
+mypy==1.8.0
 black==23.12.0
+pytest==7.4.3
+pytest-mock==3.12.0
+pytest-asyncio==0.23.2
+responses==0.24.1
+httpx==0.26.0
